# vffish

./: .gitignore  CMakeLists.txt  Makefile  README.md  vffish_main.c
include/: basic_math.h
src/: vffish_main.c
tests/: test_basic_math.c
